# capnet_mnist_rust

./: .gitignore  Cargo.toml  README.md  just_text.txt
python_version/: README.md  capnet_multi_data.ipynb  main.py  requirements.txt
src/: data_loaders.rs  main.rs  process_csv_data.rs
